<resources>
    <string name="app_name">AppVideojuegos</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Login -->
    <string name="titulo_login">Iniciar Sesión</string>
    <string name="email_login">Email</string>
    <string name="pass_login">Contraseña</string>
    <string name="textoregistro">¿No tienes una cuenta? ¡Registrate!</string>
    <string name="aceptar">Aceptar</string>
    <string name="registrar">Registrar</string>

    <!-- Registrar -->
    <string name="titulo_registrar">Registrar Usuario</string>
    <string name="email_registro">Email</string>
    <string name="nombre_registro">Nombre</string>
    <string name="apellido_registro">Apellido</string>
    <string name="pass_registro">Contraseña</string>
    <string name="boton_registro">Registrar</string>

    <!-- Lista usuario -->
    <string name="lista_juegos">Lista de Juegos de:</string>

    <!-- Menu (opciones) -->
    <string name="lista">Mi lista</string>
    <string name="buscar_juegos_menu">Buscar videojuego</string>

    <!-- Videojuego_item -->
    <string name="nota_item">Nota:</string>
    <string name="nombre_item">Nombre:</string>
    <string name="fecha_item">Fecha:</string>
    <string name="estado_item">Estado:</string>
    <string name="nota_lista_item">Nota personal:</string>

    <!-- Buscar Videojuegos -->
    <string name="buscar_juegos">Buscar juegos:</string>
    <string name="nombre_juego_hint">Nombre del juego</string>
    <string name="buscar">Buscar</string>
    <string name="resBusqueda">Resultados de la búsqueda:</string>
    <string name="juegos_famosos">Juegos famosos:</string>

    <!-- Popup -->
    <string name="valoracion_popup">Valoración</string>
    <string name="valoracion_personal_popup">Nota\n personal</string>
    <string name="eliminar">Eliminar</string>
    <string name="añadir">Añadir a la lista</string>
    <string name="actualizar">Actualizar</string>
    <string name="filtrar_juego">Filtrar</string>
    <string name="Titulo_filtros">Filtrar resultados:</string>
    <string name="filtro_nombre">Nombre:</string>
    <string name="filtro_puntuacion">Valoración personal mínima:</string>
    <string name="filtrar">Filtrar</string>
    <string name="completado">Completado</string>
    <string name="deseado">Deseado</string>
    <string name="jugando">Jugando</string>
</resources>