<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".BuscarVideojuego">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/buscar_juegos" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <EditText
        android:id="@+id/editTextBuscarJuego"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusedByDefault="false"
        android:hint="@string/nombre_juego_hint"
        android:inputType="textPersonName"
        android:minHeight="20dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="BuscarVideojuego"
        android:text="@string/buscar" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/resBusqueda"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listaRes"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/txJuegosFamosos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/juegos_famosos" />

    <ListView
        android:id="@+id/listaBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>