<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="366dp"
        android:layout_height="265dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="119dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="331dp"
            android:layout_height="43dp"
            android:autoSizeTextType="uniform"
            android:text="@string/Titulo_filtros" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="262dp"
                android:layout_height="29dp"
                android:layout_weight="1"
                android:text="@string/filtro_nombre" />

            <EditText
                android:id="@+id/filtroNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="74dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="143dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:text="@string/filtro_puntuacion" />

            <EditText
                android:id="@+id/filtroPuntuacion"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="67dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>