<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:background="@color/bluedark"
    android:padding="5dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/txtclose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/white"
        android:text="X"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center"
        android:background="@drawable/circulo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageViewPopup"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            tools:srcCompat="@tools:sample/avatars" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre"
            android:id="@+id/NombrePopup"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/independence">

            <Spinner
                android:id="@+id/spinnerPopup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:background="@color/flax"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textStyle="bold"
                    android:id="@+id/puntuacionPopup"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_gravity="center"
                    android:textStyle="italic|bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valoracion_popup"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:background="@color/green"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/puntuacionPersonalPopup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="number"
                    android:text="50"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/valoracion_personal_popup"
                    android:textAlignment="center"
                    android:layout_marginBottom="15sp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="italic|bold" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eliminar"
            android:id="@+id/botonPopup"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:layout_marginRight="60dp"
            android:backgroundTint="@color/hot_pink"
            android:background="@drawable/boton_eliminar_popup"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actualizar"
            android:id="@+id/botonActualizarPopup"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:background="@drawable/boton_popup"/>
    </LinearLayout>
</LinearLayout>